fix: remove cloudinary auto-scaling params from bg-home to prevent stretching

--- a/src/index.css
+++ b/src/index.css
@@ -204,7 +204,7 @@ button {
 }
 
 .bg-home {
-  background-image: url('https://res.cloudinary.com/dmajc7wkx/image/upload/q_auto,f_auto/luffy_second_st1o4n');
+  background-image: url('https://res.cloudinary.com/dmajc7wkx/image/upload/luffy_second_st1o4n');
   background-size: cover;
   background-position: center bottom;
   background-attachment: fixed;
